[package]
name = "commonmarker"
version = "1.0.0"
edition = "2021"

[dependencies]
magnus =  "0.5"
comrak = { git = "ssh://git@github.com/kivikakk/comrak.git", branch = "main", features = ["shortcodes"] }
syntect = { version = "5.0", features = ["plist-load"] }

[lib]
name = "commonmarker"
crate-type = ["cdylib"]
